--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "@prisma/client": "2.12.1",
     "@types/cors": "^2.8.8",
-    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@prisma/cli": "2.12.1",
