--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "2.12.1",
     "@types/cors": "^2.8.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -13,8 +14,10 @@
   },
   "devDependencies": {
     "@prisma/cli": "2.12.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.10",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
